MDEV-10360: Extended keys: index properties depend on index order

TABLE_SHARE::init_from_binary_frm_image has a rule: if an index
has a partially-covered column (like in "KEY(col(N))" ), then dont
provide "Extended Keys" feature for this index.

The problem was that due to coding error Extended Keys feature was
disabled for *ALL* subsequent indexes. Fixed the error.